hero btns fixed on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -637,11 +637,25 @@ a:hover {
 
 #hero {
   height: 100vh;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/img/hero-bg.jpg");
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.48), rgba(0, 0, 0, 0.48)), url("/img/hero-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   position: relative;
+}
+#hero #btns #cotizar {
+  margin-right: 1rem;
+}
+@media (max-width: 39.9375em) {
+  #hero #btns #cotizar {
+    margin-right: 0;
+    margin-bottom: 1.25rem;
+  }
+}
+@media (max-width: 39.9375em) {
+  #hero #btns {
+    flex-direction: column;
+  }
 }
 #hero #arrow-wrapper {
   width: 100%;
